// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`enroll-profile-with-password should display field level error when password does not fulfill requirements 1`] = `
<div>
  <div
    class="MuiScopedCssBaseline-root emotion-0"
  >
    <div
      class="MuiScopedCssBaseline-root emotion-1"
    >
      <main
        class="auth-container main-container MuiBox-root emotion-2"
        data-commit="b9bbc0140703c3fbf0e2e58920362e70"
        data-version="0.0.0"
        dir="ltr"
        id="okta-sign-in"
        lang="en"
      >
        <div
          class="MuiScopedCssBaseline-root emotion-3"
        >
          <div
            class="MuiBox-root emotion-4"
          >
            <div
              class="MuiBox-root emotion-5"
            >
              <div
                class="okta-sign-in-header auth-header MuiBox-root emotion-6"
              >
                <h1
                  class="MuiTypography-root MuiTypography-h1 emotion-7"
                />
              </div>
              <div
                class="MuiBox-root emotion-8"
              >
                <form
                  class="o-form MuiBox-root emotion-9"
                  data-se="o-form"
                  novalidate=""
                >
                  <div
                    class="MuiBox-root emotion-10"
                  >
                    <div
                      class="MuiPaper-root MuiPaper-elevation MuiPaper-rounded MuiPaper-elevation0 MuiAlert-root MuiAlert-calloutError MuiAlert-callout emotion-11"
                      role="alert"
                    >
                      <div
                        class="MuiAlert-icon emotion-12"
                      >
                        <svg
                          aria-hidden="true"
                          class="MuiSvgIcon-root MuiSvgIcon-fontSizeInherit emotion-13"
                          fill="none"
                          focusable="false"
                          viewBox="0 0 24 24"
                          xmlns="http://www.w3.org/2000/svg"
                        >
                          <path
                            clip-rule="evenodd"
                            d="M9.879 1.707a3 3 0 0 1 4.242 0l8.172 8.172a3 3 0 0 1 0 4.242l-8.172 8.172a3 3 0 0 1-4.242 0L1.707 14.12a3 3 0 0 1 0-4.242L9.88 1.707ZM12 13a1 1 0 0 1-1-1V7h2v5a1 1 0 0 1-1 1Zm0 1.75a1.25 1.25 0 1 0 0 2.5 1.25 1.25 0 0 0 0-2.5Z"
                            fill="currentColor"
                            fill-rule="evenodd"
                          />
                        </svg>
                      </div>
                      <div
                        class="MuiAlert-message emotion-14"
                      >
                        <span
                          class="MuiBox-root emotion-15"
                        >
                          error
                        </span>
                        <div
                          class="MuiBox-root emotion-2"
                        >
                          We found some errors. Please review the form and make corrections.
                        </div>
                      </div>
                    </div>
                  </div>
                  <div
                    class="MuiBox-root emotion-17"
                  >
                    <div
                      class="MuiBox-root emotion-18"
                    >
                      <div
                        class="MuiBox-root emotion-19"
                      >
                        <h2
                          class="MuiTypography-root MuiTypography-h4 emotion-20"
                          data-se="o-form-head"
                          id="enroll-profile_Title_Sign_up_NON_NULL_VALUE_1"
                          tabindex="-1"
                        >
                          Sign up
                        </h2>
                      </div>
                    </div>
                    <div
                      class="MuiBox-root emotion-18"
                    >
                      <div
                        class="MuiBox-root emotion-19"
                      >
                        <p
                          class="MuiTypography-root MuiTypography-body1 MuiTypography-paragraph emotion-23"
                          data-se="o-form-explain"
                          id="enroll-profile_Description_Fields_are_required_unless_marked_optional_NON_NULL_VALUE_2"
                        >
                          Fields are required unless marked optional.
                        </p>
                      </div>
                    </div>
                    <div
                      class="MuiBox-root emotion-18"
                    >
                      <figure
                        class="MuiBox-root emotion-25"
                        data-se="password-authenticator--rules"
                        id="enroll-profile_PasswordRequirements_NON_NULL_VALUE_3"
                      >
                        <figcaption
                          class="password-authenticator--heading MuiBox-root emotion-2"
                        >
                          Password requirements:
                        </figcaption>
                        <ul
                          class="MuiBox-root emotion-27"
                          id="password-authenticator--list"
                        >
                          <li
                            class="MuiBox-root emotion-28"
                          >
                            <div
                              class="MuiBox-root emotion-29"
                            >
                              <div
                                aria-hidden="true"
                                class="passwordRequirementIcon MuiBox-root emotion-30"
                              >
                                <svg
                                  class="MuiSvgIcon-root MuiSvgIcon-fontSizeInherit emotion-31"
                                  fill="none"
                                  focusable="false"
                                  role="img"
                                  viewBox="0 0 24 24"
                                  xmlns="http://www.w3.org/2000/svg"
                                >
                                  <path
                                    clip-rule="evenodd"
                                    d="M12 3a9 9 0 1 0 0 18 9 9 0 0 0 0-18ZM1 12C1 5.925 5.925 1 12 1s11 4.925 11 11-4.925 11-11 11S1 18.075 1 12Zm11-3.25a1.25 1.25 0 1 0 0-2.5 1.25 1.25 0 0 0 0 2.5Zm1 2.75a1 1 0 1 0-2 0v6h2v-6Z"
                                    fill="currentColor"
                                    fill-rule="evenodd"
                                  />
                                  <title>
                                    info
                                  </title>
                                </svg>
                              </div>
                              <div
                                class="MuiBox-root emotion-2"
                              >
                                <p
                                  class="MuiTypography-root MuiTypography-body1 emotion-33"
                                >
                                  At least 8 characters
                                </p>
                              </div>
                            </div>
                          </li>
                          <li
                            class="MuiBox-root emotion-28"
                          >
                            <div
                              class="MuiBox-root emotion-29"
                            >
                              <div
                                aria-hidden="true"
                                class="passwordRequirementIcon MuiBox-root emotion-30"
                              >
                                <svg
                                  class="MuiSvgIcon-root MuiSvgIcon-fontSizeInherit emotion-31"
                                  fill="none"
                                  focusable="false"
                                  role="img"
                                  viewBox="0 0 24 24"
                                  xmlns="http://www.w3.org/2000/svg"
                                >
                                  <path
                                    clip-rule="evenodd"
                                    d="M12 3a9 9 0 1 0 0 18 9 9 0 0 0 0-18ZM1 12C1 5.925 5.925 1 12 1s11 4.925 11 11-4.925 11-11 11S1 18.075 1 12Zm11-3.25a1.25 1.25 0 1 0 0-2.5 1.25 1.25 0 0 0 0 2.5Zm1 2.75a1 1 0 1 0-2 0v6h2v-6Z"
                                    fill="currentColor"
                                    fill-rule="evenodd"
                                  />
                                  <title>
                                    info
                                  </title>
                                </svg>
                              </div>
                              <div
                                class="MuiBox-root emotion-2"
                              >
                                <p
                                  class="MuiTypography-root MuiTypography-body1 emotion-33"
                                >
                                  A lowercase letter
                                </p>
                              </div>
                            </div>
                          </li>
                          <li
                            class="MuiBox-root emotion-28"
                          >
                            <div
                              class="MuiBox-root emotion-29"
                            >
                              <div
                                aria-hidden="true"
                                class="passwordRequirementIcon MuiBox-root emotion-30"
                              >
                                <svg
                                  class="MuiSvgIcon-root MuiSvgIcon-fontSizeInherit emotion-31"
                                  fill="none"
                                  focusable="false"
                                  role="img"
                                  viewBox="0 0 24 24"
                                  xmlns="http://www.w3.org/2000/svg"
                                >
                                  <path
                                    clip-rule="evenodd"
                                    d="M12 3a9 9 0 1 0 0 18 9 9 0 0 0 0-18ZM1 12C1 5.925 5.925 1 12 1s11 4.925 11 11-4.925 11-11 11S1 18.075 1 12Zm11-3.25a1.25 1.25 0 1 0 0-2.5 1.25 1.25 0 0 0 0 2.5Zm1 2.75a1 1 0 1 0-2 0v6h2v-6Z"
                                    fill="currentColor"
                                    fill-rule="evenodd"
                                  />
                                  <title>
                                    info
                                  </title>
                                </svg>
                              </div>
                              <div
                                class="MuiBox-root emotion-2"
                              >
                                <p
                                  class="MuiTypography-root MuiTypography-body1 emotion-33"
                                >
                                  An uppercase letter
                                </p>
                              </div>
                            </div>
                          </li>
                          <li
                            class="MuiBox-root emotion-28"
                          >
                            <div
                              class="MuiBox-root emotion-29"
                            >
                              <div
                                aria-hidden="true"
                                class="passwordRequirementIcon MuiBox-root emotion-30"
                              >
                                <svg
                                  class="MuiSvgIcon-root MuiSvgIcon-fontSizeInherit emotion-31"
                                  fill="none"
                                  focusable="false"
                                  role="img"
                                  viewBox="0 0 24 24"
                                  xmlns="http://www.w3.org/2000/svg"
                                >
                                  <path
                                    clip-rule="evenodd"
                                    d="M12 3a9 9 0 1 0 0 18 9 9 0 0 0 0-18ZM1 12C1 5.925 5.925 1 12 1s11 4.925 11 11-4.925 11-11 11S1 18.075 1 12Zm11-3.25a1.25 1.25 0 1 0 0-2.5 1.25 1.25 0 0 0 0 2.5Zm1 2.75a1 1 0 1 0-2 0v6h2v-6Z"
                                    fill="currentColor"
                                    fill-rule="evenodd"
                                  />
                                  <title>
                                    info
                                  </title>
                                </svg>
                              </div>
                              <div
                                class="MuiBox-root emotion-2"
                              >
                                <p
                                  class="MuiTypography-root MuiTypography-body1 emotion-33"
                                >
                                  A number
                                </p>
                              </div>
                            </div>
                          </li>
                          <li
                            class="MuiBox-root emotion-28"
                          >
                            <div
                              class="MuiBox-root emotion-29"
                            >
                              <div
                                aria-hidden="true"
                                class="passwordRequirementIcon MuiBox-root emotion-30"
                              >
                                <svg
                                  class="MuiSvgIcon-root MuiSvgIcon-fontSizeInherit emotion-31"
                                  fill="none"
                                  focusable="false"
                                  role="img"
                                  viewBox="0 0 24 24"
                                  xmlns="http://www.w3.org/2000/svg"
                                >
                                  <path
                                    clip-rule="evenodd"
                                    d="M12 3a9 9 0 1 0 0 18 9 9 0 0 0 0-18ZM1 12C1 5.925 5.925 1 12 1s11 4.925 11 11-4.925 11-11 11S1 18.075 1 12Zm11-3.25a1.25 1.25 0 1 0 0-2.5 1.25 1.25 0 0 0 0 2.5Zm1 2.75a1 1 0 1 0-2 0v6h2v-6Z"
                                    fill="currentColor"
                                    fill-rule="evenodd"
                                  />
                                  <title>
                                    info
                                  </title>
                                </svg>
                              </div>
                              <div
                                class="MuiBox-root emotion-2"
                              >
                                <p
                                  class="MuiTypography-root MuiTypography-body1 emotion-33"
                                >
                                  No parts of your username
                                </p>
                              </div>
                            </div>
                          </li>
                        </ul>
                      </figure>
                    </div>
                    <div
                      class="MuiBox-root emotion-18"
                    >
                      <div
                        class="MuiBox-root emotion-2"
                      >
                        <label
                          class="MuiFormLabel-root MuiInputLabel-root MuiFormLabel-colorPrimary MuiInputLabel-root emotion-60"
                          data-shrink="false"
                          for="userProfile.email"
                        >
                          Email
                          <span
                            aria-hidden="true"
                            class="no-translate MuiBox-root emotion-61"
                          >
                            *
                          </span>
                        </label>
                        <div
                          class="MuiInputBase-root MuiInputBase-colorPrimary MuiInputBase-fullWidth emotion-62"
                        >
                          <input
                            aria-invalid="false"
                            autocomplete="email"
                            class="MuiInputBase-input emotion-63"
                            data-se="userProfile.email"
                            id="userProfile.email"
                            inputmode="email"
                            name="userProfile.email"
                            type="text"
                          />
                        </div>
                      </div>
                    </div>
                    <div
                      class="MuiBox-root emotion-18"
                    >
                      <div
                        class="MuiBox-root emotion-2"
                      >
                        <label
                          class="MuiFormLabel-root MuiInputLabel-root MuiFormLabel-colorPrimary MuiInputLabel-root emotion-60"
                          data-shrink="false"
                          for="userProfile.firstName"
                        >
                          First name
                          <span
                            aria-hidden="true"
                            class="no-translate MuiBox-root emotion-61"
                          >
                            *
                          </span>
                        </label>
                        <div
                          class="MuiInputBase-root MuiInputBase-colorPrimary MuiInputBase-fullWidth emotion-62"
                        >
                          <input
                            aria-invalid="false"
                            autocomplete="given-name"
                            class="MuiInputBase-input emotion-63"
                            data-se="userProfile.firstName"
                            id="userProfile.firstName"
                            name="userProfile.firstName"
                            type="text"
                          />
                        </div>
                      </div>
                    </div>
                    <div
                      class="MuiBox-root emotion-18"
                    >
                      <div
                        class="MuiBox-root emotion-2"
                      >
                        <label
                          class="MuiFormLabel-root MuiInputLabel-root MuiFormLabel-colorPrimary MuiInputLabel-root emotion-60"
                          data-shrink="false"
                          for="userProfile.lastName"
                        >
                          Last name
                          <span
                            aria-hidden="true"
                            class="no-translate MuiBox-root emotion-61"
                          >
                            *
                          </span>
                        </label>
                        <div
                          class="MuiInputBase-root MuiInputBase-colorPrimary MuiInputBase-fullWidth emotion-62"
                        >
                          <input
                            aria-invalid="false"
                            autocomplete="family-name"
                            class="MuiInputBase-input emotion-63"
                            data-se="userProfile.lastName"
                            id="userProfile.lastName"
                            name="userProfile.lastName"
                            type="text"
                          />
                        </div>
                      </div>
                    </div>
                    <div
                      class="MuiBox-root emotion-18"
                    >
                      <div
                        class="MuiBox-root emotion-2"
                      >
                        <label
                          class="MuiFormLabel-root MuiInputLabel-root MuiFormLabel-colorPrimary MuiInputLabel-root emotion-60"
                          data-shrink="false"
                          for="credentials.passcode"
                        >
                          Password
                          <span
                            aria-hidden="true"
                            class="no-translate MuiBox-root emotion-61"
                          >
                            *
                          </span>
                        </label>
                        <div
                          class="MuiInputBase-root MuiInputBase-colorPrimary Mui-error MuiInputBase-fullWidth MuiInputBase-adornedEnd emotion-62"
                          dir="ltr"
                        >
                          <input
                            aria-describedby=" credentials.passcode-error enroll-profile_PasswordRequirements_NON_NULL_VALUE_3 "
                            aria-invalid="true"
                            autocomplete="new-password"
                            class="MuiInputBase-input MuiInputBase-inputAdornedEnd emotion-63"
                            data-se="credentials.passcode"
                            id="credentials.passcode"
                            name="credentials.passcode"
                            type="password"
                          />
                          <div
                            class="MuiInputAdornment-root MuiInputAdornment-positionEnd emotion-82"
                          >
                            <button
                              aria-controls="credentials.passcode"
                              aria-label="Show password"
                              aria-pressed="false"
                              class="MuiButtonBase-root MuiIconButton-root MuiIconButton-sizeMedium emotion-83"
                              data-mui-internal-clone-element="true"
                              tabindex="0"
                              type="button"
                            >
                              <svg
                                aria-hidden="true"
                                class="MuiSvgIcon-root MuiSvgIcon-fontSizeInherit emotion-13"
                                fill="none"
                                focusable="false"
                                viewBox="0 0 24 24"
                                xmlns="http://www.w3.org/2000/svg"
                              >
                                <path
                                  clip-rule="evenodd"
                                  d="M3.43 12.813A12.814 12.814 0 0 1 3.069 12a14.153 14.153 0 0 1 1.966-3.38C6.506 6.762 8.746 5 12 5s5.494 1.761 6.966 3.62A14.152 14.152 0 0 1 20.932 12a14.151 14.151 0 0 1-1.966 3.38C17.494 17.238 15.254 19 12 19s-5.494-1.761-6.966-3.62a14.152 14.152 0 0 1-1.603-2.567Zm19.518-1.13L22 12c.949.316.949.317.948.317v.004l-.003.007-.008.024a7.012 7.012 0 0 1-.137.362 16.147 16.147 0 0 1-2.266 3.906C18.84 18.762 16.08 21 12 21c-4.08 0-6.84-2.239-8.534-4.38A16.15 16.15 0 0 1 1.2 12.715a10.039 10.039 0 0 1-.137-.362l-.008-.024-.002-.007-.001-.003c0-.001 0-.002.948-.318a91.698 91.698 0 0 1-.948-.317v-.004l.003-.007.008-.024.029-.08c.025-.067.06-.163.108-.282A16.15 16.15 0 0 1 3.466 7.38C5.16 5.24 7.92 3 12 3c4.08 0 6.84 2.239 8.534 4.38a16.147 16.147 0 0 1 2.266 3.906 10.026 10.026 0 0 1 .137.362l.008.024.002.007.001.003ZM2 12l-.949.316L.946 12l.105-.316L2 12Zm20 0 .949-.316.105.316-.105.316L22 12ZM9 12a3 3 0 1 1 6 0 3 3 0 0 1-6 0Zm3-5a5 5 0 1 0 0 10 5 5 0 0 0 0-10Z"
                                  fill="currentColor"
                                  fill-rule="evenodd"
                                />
                              </svg>
                            </button>
                          </div>
                        </div>
                        <div
                          class="MuiBox-root emotion-2"
                        >
                          <p
                            class="MuiFormHelperText-root Mui-error emotion-86"
                            data-se="credentials.passcode-error"
                            id="credentials.passcode-error"
                            role="alert"
                          >
                            <div
                              class="MuiBox-root emotion-87"
                            >
                              <p
                                class="MuiTypography-root MuiTypography-body1 emotion-88"
                              >
                                Password requirements were not met:
                              </p>
                              <ul
                                class="MuiList-root MuiList-dense emotion-89"
                              >
                                <li
                                  class="MuiListItem-root MuiListItem-dense MuiListItem-gutters emotion-90"
                                >
                                  At least 8 characters
                                </li>
                                <li
                                  class="MuiListItem-root MuiListItem-dense MuiListItem-gutters emotion-90"
                                >
                                  An uppercase letter
                                </li>
                              </ul>
                            </div>
                          </p>
                        </div>
                      </div>
                    </div>
                    <div
                      class="MuiBox-root emotion-18"
                    >
                      <button
                        class="MuiButtonBase-root MuiButton-root MuiButton-primary MuiButton-primaryPrimary MuiButton-sizeMedium MuiButton-primarySizeMedium MuiButton-disableElevation MuiButton-fullWidth MuiButton-root MuiButton-primary MuiButton-primaryPrimary MuiButton-sizeMedium MuiButton-primarySizeMedium MuiButton-disableElevation MuiButton-fullWidth emotion-93"
                        data-type="save"
                        tabindex="0"
                        type="submit"
                      >
                        Sign Up
                      </button>
                    </div>
                    <div
                      class="MuiBox-root emotion-18"
                    >
                      <hr
                        class="MuiDivider-root MuiDivider-fullWidth separation-line emotion-95"
                      />
                    </div>
                    <div
                      class="MuiBox-root emotion-96"
                    >
                      <div
                        class="MuiBox-root emotion-97"
                      >
                        <div
                          class="MuiBox-root emotion-19"
                        >
                          <p
                            class="MuiTypography-root MuiTypography-body1 MuiTypography-paragraph emotion-23"
                            data-se="haveaccount"
                            id="enroll-profile_Description_Already_have_an_account_NON_NULL_VALUE_11"
                          >
                            Already have an account?
                          </p>
                        </div>
                      </div>
                      <div
                        class="MuiBox-root emotion-97"
                      >
                        <button
                          class="MuiTypography-root MuiTypography-body1 MuiLink-root MuiLink-underlineAlways MuiLink-button emotion-101"
                          data-se="back"
                          role="link"
                          type="button"
                        >
                          Sign In
                        </button>
                      </div>
                    </div>
                  </div>
                </form>
              </div>
            </div>
          </div>
        </div>
      </main>
    </div>
  </div>
</div>
`;

exports[`enroll-profile-with-password should display field level error when password field is required but is not filled 1`] = `
<div>
  <div
    class="MuiScopedCssBaseline-root emotion-0"
  >
    <div
      class="MuiScopedCssBaseline-root emotion-1"
    >
      <main
        class="auth-container main-container MuiBox-root emotion-2"
        data-commit="b9bbc0140703c3fbf0e2e58920362e70"
        data-version="0.0.0"
        dir="ltr"
        id="okta-sign-in"
        lang="en"
      >
        <div
          class="MuiScopedCssBaseline-root emotion-3"
        >
          <div
            class="MuiBox-root emotion-4"
          >
            <div
              class="MuiBox-root emotion-5"
            >
              <div
                class="okta-sign-in-header auth-header MuiBox-root emotion-6"
              >
                <h1
                  class="MuiTypography-root MuiTypography-h1 emotion-7"
                />
              </div>
              <div
                class="MuiBox-root emotion-8"
              >
                <form
                  class="o-form MuiBox-root emotion-9"
                  data-se="o-form"
                  novalidate=""
                >
                  <div
                    class="MuiBox-root emotion-10"
                  >
                    <div
                      class="MuiPaper-root MuiPaper-elevation MuiPaper-rounded MuiPaper-elevation0 MuiAlert-root MuiAlert-calloutError MuiAlert-callout emotion-11"
                      role="alert"
                    >
                      <div
                        class="MuiAlert-icon emotion-12"
                      >
                        <svg
                          aria-hidden="true"
                          class="MuiSvgIcon-root MuiSvgIcon-fontSizeInherit emotion-13"
                          fill="none"
                          focusable="false"
                          viewBox="0 0 24 24"
                          xmlns="http://www.w3.org/2000/svg"
                        >
                          <path
                            clip-rule="evenodd"
                            d="M9.879 1.707a3 3 0 0 1 4.242 0l8.172 8.172a3 3 0 0 1 0 4.242l-8.172 8.172a3 3 0 0 1-4.242 0L1.707 14.12a3 3 0 0 1 0-4.242L9.88 1.707ZM12 13a1 1 0 0 1-1-1V7h2v5a1 1 0 0 1-1 1Zm0 1.75a1.25 1.25 0 1 0 0 2.5 1.25 1.25 0 0 0 0-2.5Z"
                            fill="currentColor"
                            fill-rule="evenodd"
                          />
                        </svg>
                      </div>
                      <div
                        class="MuiAlert-message emotion-14"
                      >
                        <span
                          class="MuiBox-root emotion-15"
                        >
                          error
                        </span>
                        <div
                          class="MuiBox-root emotion-2"
                        >
                          We found some errors. Please review the form and make corrections.
                        </div>
                      </div>
                    </div>
                  </div>
                  <div
                    class="MuiBox-root emotion-17"
                  >
                    <div
                      class="MuiBox-root emotion-18"
                    >
                      <div
                        class="MuiBox-root emotion-19"
                      >
                        <h2
                          class="MuiTypography-root MuiTypography-h4 emotion-20"
                          data-se="o-form-head"
                          id="enroll-profile_Title_Sign_up_NON_NULL_VALUE_1"
                          tabindex="-1"
                        >
                          Sign up
                        </h2>
                      </div>
                    </div>
                    <div
                      class="MuiBox-root emotion-18"
                    >
                      <div
                        class="MuiBox-root emotion-19"
                      >
                        <p
                          class="MuiTypography-root MuiTypography-body1 MuiTypography-paragraph emotion-23"
                          data-se="o-form-explain"
                          id="enroll-profile_Description_Fields_are_required_unless_marked_optional_NON_NULL_VALUE_2"
                        >
                          Fields are required unless marked optional.
                        </p>
                      </div>
                    </div>
                    <div
                      class="MuiBox-root emotion-18"
                    >
                      <figure
                        class="MuiBox-root emotion-25"
                        data-se="password-authenticator--rules"
                        id="enroll-profile_PasswordRequirements_NON_NULL_VALUE_3"
                      >
                        <figcaption
                          class="password-authenticator--heading MuiBox-root emotion-2"
                        >
                          Password requirements:
                        </figcaption>
                        <ul
                          class="MuiBox-root emotion-27"
                          id="password-authenticator--list"
                        >
                          <li
                            class="MuiBox-root emotion-28"
                          >
                            <div
                              class="MuiBox-root emotion-29"
                            >
                              <div
                                aria-hidden="true"
                                class="passwordRequirementIcon MuiBox-root emotion-30"
                              >
                                <svg
                                  class="MuiSvgIcon-root MuiSvgIcon-fontSizeInherit emotion-31"
                                  fill="none"
                                  focusable="false"
                                  role="img"
                                  viewBox="0 0 24 24"
                                  xmlns="http://www.w3.org/2000/svg"
                                >
                                  <path
                                    clip-rule="evenodd"
                                    d="M12 3a9 9 0 1 0 0 18 9 9 0 0 0 0-18ZM1 12C1 5.925 5.925 1 12 1s11 4.925 11 11-4.925 11-11 11S1 18.075 1 12Zm11-3.25a1.25 1.25 0 1 0 0-2.5 1.25 1.25 0 0 0 0 2.5Zm1 2.75a1 1 0 1 0-2 0v6h2v-6Z"
                                    fill="currentColor"
                                    fill-rule="evenodd"
                                  />
                                  <title>
                                    info
                                  </title>
                                </svg>
                              </div>
                              <div
                                class="MuiBox-root emotion-2"
                              >
                                <p
                                  class="MuiTypography-root MuiTypography-body1 emotion-33"
                                >
                                  At least 8 characters
                                </p>
                              </div>
                            </div>
                          </li>
                          <li
                            class="MuiBox-root emotion-28"
                          >
                            <div
                              class="MuiBox-root emotion-29"
                            >
                              <div
                                aria-hidden="true"
                                class="passwordRequirementIcon MuiBox-root emotion-30"
                              >
                                <svg
                                  class="MuiSvgIcon-root MuiSvgIcon-fontSizeInherit emotion-31"
                                  fill="none"
                                  focusable="false"
                                  role="img"
                                  viewBox="0 0 24 24"
                                  xmlns="http://www.w3.org/2000/svg"
                                >
                                  <path
                                    clip-rule="evenodd"
                                    d="M12 3a9 9 0 1 0 0 18 9 9 0 0 0 0-18ZM1 12C1 5.925 5.925 1 12 1s11 4.925 11 11-4.925 11-11 11S1 18.075 1 12Zm11-3.25a1.25 1.25 0 1 0 0-2.5 1.25 1.25 0 0 0 0 2.5Zm1 2.75a1 1 0 1 0-2 0v6h2v-6Z"
                                    fill="currentColor"
                                    fill-rule="evenodd"
                                  />
                                  <title>
                                    info
                                  </title>
                                </svg>
                              </div>
                              <div
                                class="MuiBox-root emotion-2"
                              >
                                <p
                                  class="MuiTypography-root MuiTypography-body1 emotion-33"
                                >
                                  A lowercase letter
                                </p>
                              </div>
                            </div>
                          </li>
                          <li
                            class="MuiBox-root emotion-28"
                          >
                            <div
                              class="MuiBox-root emotion-29"
                            >
                              <div
                                aria-hidden="true"
                                class="passwordRequirementIcon MuiBox-root emotion-30"
                              >
                                <svg
                                  class="MuiSvgIcon-root MuiSvgIcon-fontSizeInherit emotion-31"
                                  fill="none"
                                  focusable="false"
                                  role="img"
                                  viewBox="0 0 24 24"
                                  xmlns="http://www.w3.org/2000/svg"
                                >
                                  <path
                                    clip-rule="evenodd"
                                    d="M12 3a9 9 0 1 0 0 18 9 9 0 0 0 0-18ZM1 12C1 5.925 5.925 1 12 1s11 4.925 11 11-4.925 11-11 11S1 18.075 1 12Zm11-3.25a1.25 1.25 0 1 0 0-2.5 1.25 1.25 0 0 0 0 2.5Zm1 2.75a1 1 0 1 0-2 0v6h2v-6Z"
                                    fill="currentColor"
                                    fill-rule="evenodd"
                                  />
                                  <title>
                                    info
                                  </title>
                                </svg>
                              </div>
                              <div
                                class="MuiBox-root emotion-2"
                              >
                                <p
                                  class="MuiTypography-root MuiTypography-body1 emotion-33"
                                >
                                  An uppercase letter
                                </p>
                              </div>
                            </div>
                          </li>
                          <li
                            class="MuiBox-root emotion-28"
                          >
                            <div
                              class="MuiBox-root emotion-29"
                            >
                              <div
                                aria-hidden="true"
                                class="passwordRequirementIcon MuiBox-root emotion-30"
                              >
                                <svg
                                  class="MuiSvgIcon-root MuiSvgIcon-fontSizeInherit emotion-31"
                                  fill="none"
                                  focusable="false"
                                  role="img"
                                  viewBox="0 0 24 24"
                                  xmlns="http://www.w3.org/2000/svg"
                                >
                                  <path
                                    clip-rule="evenodd"
                                    d="M12 3a9 9 0 1 0 0 18 9 9 0 0 0 0-18ZM1 12C1 5.925 5.925 1 12 1s11 4.925 11 11-4.925 11-11 11S1 18.075 1 12Zm11-3.25a1.25 1.25 0 1 0 0-2.5 1.25 1.25 0 0 0 0 2.5Zm1 2.75a1 1 0 1 0-2 0v6h2v-6Z"
                                    fill="currentColor"
                                    fill-rule="evenodd"
                                  />
                                  <title>
                                    info
                                  </title>
                                </svg>
                              </div>
                              <div
                                class="MuiBox-root emotion-2"
                              >
                                <p
                                  class="MuiTypography-root MuiTypography-body1 emotion-33"
                                >
                                  A number
                                </p>
                              </div>
                            </div>
                          </li>
                          <li
                            class="MuiBox-root emotion-28"
                          >
                            <div
                              class="MuiBox-root emotion-29"
                            >
                              <div
                                aria-hidden="true"
                                class="passwordRequirementIcon MuiBox-root emotion-30"
                              >
                                <svg
                                  class="MuiSvgIcon-root MuiSvgIcon-fontSizeInherit emotion-31"
                                  fill="none"
                                  focusable="false"
                                  role="img"
                                  viewBox="0 0 24 24"
                                  xmlns="http://www.w3.org/2000/svg"
                                >
                                  <path
                                    clip-rule="evenodd"
                                    d="M12 3a9 9 0 1 0 0 18 9 9 0 0 0 0-18ZM1 12C1 5.925 5.925 1 12 1s11 4.925 11 11-4.925 11-11 11S1 18.075 1 12Zm11-3.25a1.25 1.25 0 1 0 0-2.5 1.25 1.25 0 0 0 0 2.5Zm1 2.75a1 1 0 1 0-2 0v6h2v-6Z"
                                    fill="currentColor"
                                    fill-rule="evenodd"
                                  />
                                  <title>
                                    info
                                  </title>
                                </svg>
                              </div>
                              <div
                                class="MuiBox-root emotion-2"
                              >
                                <p
                                  class="MuiTypography-root MuiTypography-body1 emotion-33"
                                >
                                  No parts of your username
                                </p>
                              </div>
                            </div>
                          </li>
                        </ul>
                      </figure>
                    </div>
                    <div
                      class="MuiBox-root emotion-18"
                    >
                      <div
                        class="MuiBox-root emotion-2"
                      >
                        <label
                          class="MuiFormLabel-root MuiInputLabel-root MuiFormLabel-colorPrimary MuiInputLabel-root emotion-60"
                          data-shrink="false"
                          for="userProfile.email"
                        >
                          Email
                          <span
                            aria-hidden="true"
                            class="no-translate MuiBox-root emotion-61"
                          >
                            *
                          </span>
                        </label>
                        <div
                          class="MuiInputBase-root MuiInputBase-colorPrimary MuiInputBase-fullWidth emotion-62"
                        >
                          <input
                            aria-invalid="false"
                            autocomplete="email"
                            class="MuiInputBase-input emotion-63"
                            data-se="userProfile.email"
                            id="userProfile.email"
                            inputmode="email"
                            name="userProfile.email"
                            type="text"
                          />
                        </div>
                      </div>
                    </div>
                    <div
                      class="MuiBox-root emotion-18"
                    >
                      <div
                        class="MuiBox-root emotion-2"
                      >
                        <label
                          class="MuiFormLabel-root MuiInputLabel-root MuiFormLabel-colorPrimary MuiInputLabel-root emotion-60"
                          data-shrink="false"
                          for="userProfile.firstName"
                        >
                          First name
                          <span
                            aria-hidden="true"
                            class="no-translate MuiBox-root emotion-61"
                          >
                            *
                          </span>
                        </label>
                        <div
                          class="MuiInputBase-root MuiInputBase-colorPrimary MuiInputBase-fullWidth emotion-62"
                        >
                          <input
                            aria-invalid="false"
                            autocomplete="given-name"
                            class="MuiInputBase-input emotion-63"
                            data-se="userProfile.firstName"
                            id="userProfile.firstName"
                            name="userProfile.firstName"
                            type="text"
                          />
                        </div>
                      </div>
                    </div>
                    <div
                      class="MuiBox-root emotion-18"
                    >
                      <div
                        class="MuiBox-root emotion-2"
                      >
                        <label
                          class="MuiFormLabel-root MuiInputLabel-root MuiFormLabel-colorPrimary MuiInputLabel-root emotion-60"
                          data-shrink="false"
                          for="userProfile.lastName"
                        >
                          Last name
                          <span
                            aria-hidden="true"
                            class="no-translate MuiBox-root emotion-61"
                          >
                            *
                          </span>
                        </label>
                        <div
                          class="MuiInputBase-root MuiInputBase-colorPrimary MuiInputBase-fullWidth emotion-62"
                        >
                          <input
                            aria-invalid="false"
                            autocomplete="family-name"
                            class="MuiInputBase-input emotion-63"
                            data-se="userProfile.lastName"
                            id="userProfile.lastName"
                            name="userProfile.lastName"
                            type="text"
                          />
                        </div>
                      </div>
                    </div>
                    <div
                      class="MuiBox-root emotion-18"
                    >
                      <div
                        class="MuiBox-root emotion-2"
                      >
                        <label
                          class="MuiFormLabel-root MuiInputLabel-root MuiFormLabel-colorPrimary MuiInputLabel-root emotion-60"
                          data-shrink="false"
                          for="credentials.passcode"
                        >
                          Password
                          <span
                            aria-hidden="true"
                            class="no-translate MuiBox-root emotion-61"
                          >
                            *
                          </span>
                        </label>
                        <div
                          class="MuiInputBase-root MuiInputBase-colorPrimary Mui-error MuiInputBase-fullWidth MuiInputBase-adornedEnd emotion-62"
                          dir="ltr"
                        >
                          <input
                            aria-describedby=" credentials.passcode-error enroll-profile_PasswordRequirements_NON_NULL_VALUE_3 "
                            aria-invalid="true"
                            autocomplete="new-password"
                            class="MuiInputBase-input MuiInputBase-inputAdornedEnd emotion-63"
                            data-se="credentials.passcode"
                            id="credentials.passcode"
                            name="credentials.passcode"
                            type="password"
                          />
                          <div
                            class="MuiInputAdornment-root MuiInputAdornment-positionEnd emotion-82"
                          >
                            <button
                              aria-controls="credentials.passcode"
                              aria-label="Show password"
                              aria-pressed="false"
                              class="MuiButtonBase-root MuiIconButton-root MuiIconButton-sizeMedium emotion-83"
                              data-mui-internal-clone-element="true"
                              tabindex="0"
                              type="button"
                            >
                              <svg
                                aria-hidden="true"
                                class="MuiSvgIcon-root MuiSvgIcon-fontSizeInherit emotion-13"
                                fill="none"
                                focusable="false"
                                viewBox="0 0 24 24"
                                xmlns="http://www.w3.org/2000/svg"
                              >
                                <path
                                  clip-rule="evenodd"
                                  d="M3.43 12.813A12.814 12.814 0 0 1 3.069 12a14.153 14.153 0 0 1 1.966-3.38C6.506 6.762 8.746 5 12 5s5.494 1.761 6.966 3.62A14.152 14.152 0 0 1 20.932 12a14.151 14.151 0 0 1-1.966 3.38C17.494 17.238 15.254 19 12 19s-5.494-1.761-6.966-3.62a14.152 14.152 0 0 1-1.603-2.567Zm19.518-1.13L22 12c.949.316.949.317.948.317v.004l-.003.007-.008.024a7.012 7.012 0 0 1-.137.362 16.147 16.147 0 0 1-2.266 3.906C18.84 18.762 16.08 21 12 21c-4.08 0-6.84-2.239-8.534-4.38A16.15 16.15 0 0 1 1.2 12.715a10.039 10.039 0 0 1-.137-.362l-.008-.024-.002-.007-.001-.003c0-.001 0-.002.948-.318a91.698 91.698 0 0 1-.948-.317v-.004l.003-.007.008-.024.029-.08c.025-.067.06-.163.108-.282A16.15 16.15 0 0 1 3.466 7.38C5.16 5.24 7.92 3 12 3c4.08 0 6.84 2.239 8.534 4.38a16.147 16.147 0 0 1 2.266 3.906 10.026 10.026 0 0 1 .137.362l.008.024.002.007.001.003ZM2 12l-.949.316L.946 12l.105-.316L2 12Zm20 0 .949-.316.105.316-.105.316L22 12ZM9 12a3 3 0 1 1 6 0 3 3 0 0 1-6 0Zm3-5a5 5 0 1 0 0 10 5 5 0 0 0 0-10Z"
                                  fill="currentColor"
                                  fill-rule="evenodd"
                                />
                              </svg>
                            </button>
                          </div>
                        </div>
                        <div
                          class="MuiBox-root emotion-2"
                        >
                          <p
                            class="MuiFormHelperText-root Mui-error emotion-86"
                            data-se="credentials.passcode-error"
                            id="credentials.passcode-error"
                            role="alert"
                          >
                            This field cannot be left blank
                          </p>
                        </div>
                      </div>
                    </div>
                    <div
                      class="MuiBox-root emotion-18"
                    >
                      <button
                        class="MuiButtonBase-root MuiButton-root MuiButton-primary MuiButton-primaryPrimary MuiButton-sizeMedium MuiButton-primarySizeMedium MuiButton-disableElevation MuiButton-fullWidth MuiButton-root MuiButton-primary MuiButton-primaryPrimary MuiButton-sizeMedium MuiButton-primarySizeMedium MuiButton-disableElevation MuiButton-fullWidth emotion-88"
                        data-type="save"
                        tabindex="0"
                        type="submit"
                      >
                        Sign Up
                      </button>
                    </div>
                    <div
                      class="MuiBox-root emotion-18"
                    >
                      <hr
                        class="MuiDivider-root MuiDivider-fullWidth separation-line emotion-90"
                      />
                    </div>
                    <div
                      class="MuiBox-root emotion-91"
                    >
                      <div
                        class="MuiBox-root emotion-92"
                      >
                        <div
                          class="MuiBox-root emotion-19"
                        >
                          <p
                            class="MuiTypography-root MuiTypography-body1 MuiTypography-paragraph emotion-23"
                            data-se="haveaccount"
                            id="enroll-profile_Description_Already_have_an_account_NON_NULL_VALUE_11"
                          >
                            Already have an account?
                          </p>
                        </div>
                      </div>
                      <div
                        class="MuiBox-root emotion-92"
                      >
                        <button
                          class="MuiTypography-root MuiTypography-body1 MuiLink-root MuiLink-underlineAlways MuiLink-button emotion-96"
                          data-se="back"
                          role="link"
                          type="button"
                        >
                          Sign In
                        </button>
                      </div>
                    </div>
                  </div>
                </form>
              </div>
            </div>
          </div>
        </div>
      </main>
    </div>
  </div>
</div>
`;

exports[`enroll-profile-with-password should render form 1`] = `
<div>
  <div
    class="MuiScopedCssBaseline-root emotion-0"
  >
    <div
      class="MuiScopedCssBaseline-root emotion-1"
    >
      <main
        class="auth-container main-container MuiBox-root emotion-2"
        data-commit="b9bbc0140703c3fbf0e2e58920362e70"
        data-version="0.0.0"
        dir="ltr"
        id="okta-sign-in"
        lang="en"
      >
        <div
          class="MuiScopedCssBaseline-root emotion-3"
        >
          <div
            class="MuiBox-root emotion-4"
          >
            <div
              class="MuiBox-root emotion-5"
            >
              <div
                class="okta-sign-in-header auth-header MuiBox-root emotion-6"
              >
                <h1
                  class="MuiTypography-root MuiTypography-h1 emotion-7"
                />
              </div>
              <div
                class="MuiBox-root emotion-8"
              >
                <form
                  class="o-form MuiBox-root emotion-9"
                  data-se="o-form"
                  novalidate=""
                >
                  <div
                    class="MuiBox-root emotion-10"
                  >
                    <div
                      class="MuiBox-root emotion-11"
                    >
                      <div
                        class="MuiBox-root emotion-12"
                      >
                        <h2
                          class="MuiTypography-root MuiTypography-h4 emotion-13"
                          data-se="o-form-head"
                          id="enroll-profile_Title_Sign_up_NON_NULL_VALUE_1"
                          tabindex="-1"
                        >
                          Sign up
                        </h2>
                      </div>
                    </div>
                    <div
                      class="MuiBox-root emotion-11"
                    >
                      <div
                        class="MuiBox-root emotion-12"
                      >
                        <p
                          class="MuiTypography-root MuiTypography-body1 MuiTypography-paragraph emotion-16"
                          data-se="o-form-explain"
                          id="enroll-profile_Description_Fields_are_required_unless_marked_optional_NON_NULL_VALUE_2"
                        >
                          Fields are required unless marked optional.
                        </p>
                      </div>
                    </div>
                    <div
                      class="MuiBox-root emotion-11"
                    >
                      <figure
                        class="MuiBox-root emotion-18"
                        data-se="password-authenticator--rules"
                        id="enroll-profile_PasswordRequirements_NON_NULL_VALUE_3"
                      >
                        <figcaption
                          class="password-authenticator--heading MuiBox-root emotion-2"
                        >
                          Password requirements:
                        </figcaption>
                        <ul
                          class="MuiBox-root emotion-20"
                          id="password-authenticator--list"
                        >
                          <li
                            class="MuiBox-root emotion-21"
                          >
                            <div
                              class="MuiBox-root emotion-22"
                            >
                              <div
                                aria-hidden="true"
                                class="passwordRequirementIcon MuiBox-root emotion-23"
                              >
                                <svg
                                  class="MuiSvgIcon-root MuiSvgIcon-fontSizeInherit emotion-24"
                                  fill="none"
                                  focusable="false"
                                  role="img"
                                  viewBox="0 0 24 24"
                                  xmlns="http://www.w3.org/2000/svg"
                                >
                                  <path
                                    clip-rule="evenodd"
                                    d="M12 3a9 9 0 1 0 0 18 9 9 0 0 0 0-18ZM1 12C1 5.925 5.925 1 12 1s11 4.925 11 11-4.925 11-11 11S1 18.075 1 12Zm11-3.25a1.25 1.25 0 1 0 0-2.5 1.25 1.25 0 0 0 0 2.5Zm1 2.75a1 1 0 1 0-2 0v6h2v-6Z"
                                    fill="currentColor"
                                    fill-rule="evenodd"
                                  />
                                  <title>
                                    info
                                  </title>
                                </svg>
                              </div>
                              <div
                                class="MuiBox-root emotion-2"
                              >
                                <p
                                  class="MuiTypography-root MuiTypography-body1 emotion-26"
                                >
                                  At least 8 characters
                                </p>
                              </div>
                            </div>
                          </li>
                          <li
                            class="MuiBox-root emotion-21"
                          >
                            <div
                              class="MuiBox-root emotion-22"
                            >
                              <div
                                aria-hidden="true"
                                class="passwordRequirementIcon MuiBox-root emotion-23"
                              >
                                <svg
                                  class="MuiSvgIcon-root MuiSvgIcon-fontSizeInherit emotion-24"
                                  fill="none"
                                  focusable="false"
                                  role="img"
                                  viewBox="0 0 24 24"
                                  xmlns="http://www.w3.org/2000/svg"
                                >
                                  <path
                                    clip-rule="evenodd"
                                    d="M12 3a9 9 0 1 0 0 18 9 9 0 0 0 0-18ZM1 12C1 5.925 5.925 1 12 1s11 4.925 11 11-4.925 11-11 11S1 18.075 1 12Zm11-3.25a1.25 1.25 0 1 0 0-2.5 1.25 1.25 0 0 0 0 2.5Zm1 2.75a1 1 0 1 0-2 0v6h2v-6Z"
                                    fill="currentColor"
                                    fill-rule="evenodd"
                                  />
                                  <title>
                                    info
                                  </title>
                                </svg>
                              </div>
                              <div
                                class="MuiBox-root emotion-2"
                              >
                                <p
                                  class="MuiTypography-root MuiTypography-body1 emotion-26"
                                >
                                  A lowercase letter
                                </p>
                              </div>
                            </div>
                          </li>
                          <li
                            class="MuiBox-root emotion-21"
                          >
                            <div
                              class="MuiBox-root emotion-22"
                            >
                              <div
                                aria-hidden="true"
                                class="passwordRequirementIcon MuiBox-root emotion-23"
                              >
                                <svg
                                  class="MuiSvgIcon-root MuiSvgIcon-fontSizeInherit emotion-24"
                                  fill="none"
                                  focusable="false"
                                  role="img"
                                  viewBox="0 0 24 24"
                                  xmlns="http://www.w3.org/2000/svg"
                                >
                                  <path
                                    clip-rule="evenodd"
                                    d="M12 3a9 9 0 1 0 0 18 9 9 0 0 0 0-18ZM1 12C1 5.925 5.925 1 12 1s11 4.925 11 11-4.925 11-11 11S1 18.075 1 12Zm11-3.25a1.25 1.25 0 1 0 0-2.5 1.25 1.25 0 0 0 0 2.5Zm1 2.75a1 1 0 1 0-2 0v6h2v-6Z"
                                    fill="currentColor"
                                    fill-rule="evenodd"
                                  />
                                  <title>
                                    info
                                  </title>
                                </svg>
                              </div>
                              <div
                                class="MuiBox-root emotion-2"
                              >
                                <p
                                  class="MuiTypography-root MuiTypography-body1 emotion-26"
                                >
                                  An uppercase letter
                                </p>
                              </div>
                            </div>
                          </li>
                          <li
                            class="MuiBox-root emotion-21"
                          >
                            <div
                              class="MuiBox-root emotion-22"
                            >
                              <div
                                aria-hidden="true"
                                class="passwordRequirementIcon MuiBox-root emotion-23"
                              >
                                <svg
                                  class="MuiSvgIcon-root MuiSvgIcon-fontSizeInherit emotion-24"
                                  fill="none"
                                  focusable="false"
                                  role="img"
                                  viewBox="0 0 24 24"
                                  xmlns="http://www.w3.org/2000/svg"
                                >
                                  <path
                                    clip-rule="evenodd"
                                    d="M12 3a9 9 0 1 0 0 18 9 9 0 0 0 0-18ZM1 12C1 5.925 5.925 1 12 1s11 4.925 11 11-4.925 11-11 11S1 18.075 1 12Zm11-3.25a1.25 1.25 0 1 0 0-2.5 1.25 1.25 0 0 0 0 2.5Zm1 2.75a1 1 0 1 0-2 0v6h2v-6Z"
                                    fill="currentColor"
                                    fill-rule="evenodd"
                                  />
                                  <title>
                                    info
                                  </title>
                                </svg>
                              </div>
                              <div
                                class="MuiBox-root emotion-2"
                              >
                                <p
                                  class="MuiTypography-root MuiTypography-body1 emotion-26"
                                >
                                  A number
                                </p>
                              </div>
                            </div>
                          </li>
                          <li
                            class="MuiBox-root emotion-21"
                          >
                            <div
                              class="MuiBox-root emotion-22"
                            >
                              <div
                                aria-hidden="true"
                                class="passwordRequirementIcon MuiBox-root emotion-23"
                              >
                                <svg
                                  class="MuiSvgIcon-root MuiSvgIcon-fontSizeInherit emotion-24"
                                  fill="none"
                                  focusable="false"
                                  role="img"
                                  viewBox="0 0 24 24"
                                  xmlns="http://www.w3.org/2000/svg"
                                >
                                  <path
                                    clip-rule="evenodd"
                                    d="M12 3a9 9 0 1 0 0 18 9 9 0 0 0 0-18ZM1 12C1 5.925 5.925 1 12 1s11 4.925 11 11-4.925 11-11 11S1 18.075 1 12Zm11-3.25a1.25 1.25 0 1 0 0-2.5 1.25 1.25 0 0 0 0 2.5Zm1 2.75a1 1 0 1 0-2 0v6h2v-6Z"
                                    fill="currentColor"
                                    fill-rule="evenodd"
                                  />
                                  <title>
                                    info
                                  </title>
                                </svg>
                              </div>
                              <div
                                class="MuiBox-root emotion-2"
                              >
                                <p
                                  class="MuiTypography-root MuiTypography-body1 emotion-26"
                                >
                                  No parts of your username
                                </p>
                              </div>
                            </div>
                          </li>
                        </ul>
                      </figure>
                    </div>
                    <div
                      class="MuiBox-root emotion-11"
                    >
                      <div
                        class="MuiBox-root emotion-2"
                      >
                        <label
                          class="MuiFormLabel-root MuiInputLabel-root MuiFormLabel-colorPrimary MuiInputLabel-root emotion-53"
                          data-shrink="false"
                          for="userProfile.email"
                        >
                          Email
                          <span
                            aria-hidden="true"
                            class="no-translate MuiBox-root emotion-54"
                          >
                            *
                          </span>
                        </label>
                        <div
                          class="MuiInputBase-root MuiInputBase-colorPrimary MuiInputBase-fullWidth emotion-55"
                        >
                          <input
                            aria-invalid="false"
                            autocomplete="email"
                            class="MuiInputBase-input emotion-56"
                            data-se="userProfile.email"
                            id="userProfile.email"
                            inputmode="email"
                            name="userProfile.email"
                            type="text"
                          />
                        </div>
                      </div>
                    </div>
                    <div
                      class="MuiBox-root emotion-11"
                    >
                      <div
                        class="MuiBox-root emotion-2"
                      >
                        <label
                          class="MuiFormLabel-root MuiInputLabel-root MuiFormLabel-colorPrimary MuiInputLabel-root emotion-53"
                          data-shrink="false"
                          for="userProfile.firstName"
                        >
                          First name
                          <span
                            aria-hidden="true"
                            class="no-translate MuiBox-root emotion-54"
                          >
                            *
                          </span>
                        </label>
                        <div
                          class="MuiInputBase-root MuiInputBase-colorPrimary MuiInputBase-fullWidth emotion-55"
                        >
                          <input
                            aria-invalid="false"
                            autocomplete="given-name"
                            class="MuiInputBase-input emotion-56"
                            data-se="userProfile.firstName"
                            id="userProfile.firstName"
                            name="userProfile.firstName"
                            type="text"
                          />
                        </div>
                      </div>
                    </div>
                    <div
                      class="MuiBox-root emotion-11"
                    >
                      <div
                        class="MuiBox-root emotion-2"
                      >
                        <label
                          class="MuiFormLabel-root MuiInputLabel-root MuiFormLabel-colorPrimary MuiInputLabel-root emotion-53"
                          data-shrink="false"
                          for="userProfile.lastName"
                        >
                          Last name
                          <span
                            aria-hidden="true"
                            class="no-translate MuiBox-root emotion-54"
                          >
                            *
                          </span>
                        </label>
                        <div
                          class="MuiInputBase-root MuiInputBase-colorPrimary MuiInputBase-fullWidth emotion-55"
                        >
                          <input
                            aria-invalid="false"
                            autocomplete="family-name"
                            class="MuiInputBase-input emotion-56"
                            data-se="userProfile.lastName"
                            id="userProfile.lastName"
                            name="userProfile.lastName"
                            type="text"
                          />
                        </div>
                      </div>
                    </div>
                    <div
                      class="MuiBox-root emotion-11"
                    >
                      <div
                        class="MuiBox-root emotion-2"
                      >
                        <label
                          class="MuiFormLabel-root MuiInputLabel-root MuiFormLabel-colorPrimary MuiInputLabel-root emotion-53"
                          data-shrink="false"
                          for="credentials.passcode"
                        >
                          Password
                          <span
                            aria-hidden="true"
                            class="no-translate MuiBox-root emotion-54"
                          >
                            *
                          </span>
                        </label>
                        <div
                          class="MuiInputBase-root MuiInputBase-colorPrimary MuiInputBase-fullWidth MuiInputBase-adornedEnd emotion-55"
                          dir="ltr"
                        >
                          <input
                            aria-describedby="enroll-profile_PasswordRequirements_NON_NULL_VALUE_3"
                            aria-invalid="false"
                            autocomplete="new-password"
                            class="MuiInputBase-input MuiInputBase-inputAdornedEnd emotion-56"
                            data-se="credentials.passcode"
                            id="credentials.passcode"
                            name="credentials.passcode"
                            type="password"
                          />
                          <div
                            class="MuiInputAdornment-root MuiInputAdornment-positionEnd emotion-75"
                          >
                            <button
                              aria-controls="credentials.passcode"
                              aria-label="Show password"
                              aria-pressed="false"
                              class="MuiButtonBase-root MuiIconButton-root MuiIconButton-sizeMedium emotion-76"
                              data-mui-internal-clone-element="true"
                              tabindex="0"
                              type="button"
                            >
                              <svg
                                aria-hidden="true"
                                class="MuiSvgIcon-root MuiSvgIcon-fontSizeInherit emotion-77"
                                fill="none"
                                focusable="false"
                                viewBox="0 0 24 24"
                                xmlns="http://www.w3.org/2000/svg"
                              >
                                <path
                                  clip-rule="evenodd"
                                  d="M3.43 12.813A12.814 12.814 0 0 1 3.069 12a14.153 14.153 0 0 1 1.966-3.38C6.506 6.762 8.746 5 12 5s5.494 1.761 6.966 3.62A14.152 14.152 0 0 1 20.932 12a14.151 14.151 0 0 1-1.966 3.38C17.494 17.238 15.254 19 12 19s-5.494-1.761-6.966-3.62a14.152 14.152 0 0 1-1.603-2.567Zm19.518-1.13L22 12c.949.316.949.317.948.317v.004l-.003.007-.008.024a7.012 7.012 0 0 1-.137.362 16.147 16.147 0 0 1-2.266 3.906C18.84 18.762 16.08 21 12 21c-4.08 0-6.84-2.239-8.534-4.38A16.15 16.15 0 0 1 1.2 12.715a10.039 10.039 0 0 1-.137-.362l-.008-.024-.002-.007-.001-.003c0-.001 0-.002.948-.318a91.698 91.698 0 0 1-.948-.317v-.004l.003-.007.008-.024.029-.08c.025-.067.06-.163.108-.282A16.15 16.15 0 0 1 3.466 7.38C5.16 5.24 7.92 3 12 3c4.08 0 6.84 2.239 8.534 4.38a16.147 16.147 0 0 1 2.266 3.906 10.026 10.026 0 0 1 .137.362l.008.024.002.007.001.003ZM2 12l-.949.316L.946 12l.105-.316L2 12Zm20 0 .949-.316.105.316-.105.316L22 12ZM9 12a3 3 0 1 1 6 0 3 3 0 0 1-6 0Zm3-5a5 5 0 1 0 0 10 5 5 0 0 0 0-10Z"
                                  fill="currentColor"
                                  fill-rule="evenodd"
                                />
                              </svg>
                            </button>
                          </div>
                        </div>
                      </div>
                    </div>
                    <div
                      class="MuiBox-root emotion-11"
                    >
                      <button
                        class="MuiButtonBase-root MuiButton-root MuiButton-primary MuiButton-primaryPrimary MuiButton-sizeMedium MuiButton-primarySizeMedium MuiButton-disableElevation MuiButton-fullWidth MuiButton-root MuiButton-primary MuiButton-primaryPrimary MuiButton-sizeMedium MuiButton-primarySizeMedium MuiButton-disableElevation MuiButton-fullWidth emotion-79"
                        data-type="save"
                        tabindex="0"
                        type="submit"
                      >
                        Sign Up
                      </button>
                    </div>
                    <div
                      class="MuiBox-root emotion-11"
                    >
                      <hr
                        class="MuiDivider-root MuiDivider-fullWidth separation-line emotion-81"
                      />
                    </div>
                    <div
                      class="MuiBox-root emotion-82"
                    >
                      <div
                        class="MuiBox-root emotion-83"
                      >
                        <div
                          class="MuiBox-root emotion-12"
                        >
                          <p
                            class="MuiTypography-root MuiTypography-body1 MuiTypography-paragraph emotion-16"
                            data-se="haveaccount"
                            id="enroll-profile_Description_Already_have_an_account_NON_NULL_VALUE_11"
                          >
                            Already have an account?
                          </p>
                        </div>
                      </div>
                      <div
                        class="MuiBox-root emotion-83"
                      >
                        <button
                          class="MuiTypography-root MuiTypography-body1 MuiLink-root MuiLink-underlineAlways MuiLink-button emotion-87"
                          data-se="back"
                          role="link"
                          type="button"
                        >
                          Sign In
                        </button>
                      </div>
                    </div>
                  </div>
                </form>
              </div>
            </div>
          </div>
        </div>
      </main>
    </div>
  </div>
</div>
`;
